# RemoteMaster

./: .gitignore
decodeir/: .gitignore  DecodeIR.cpp  DecodeIR.h  DecodeIR.html  Makefile.am  configure.ac  pom.xml
exchangeir/: README.txt  pom.xml
jp12serial/Mac OS X-i386/: libjp12serial.jnilib
jp12serial/Mac OS X-x86_64/: libjp12serial.jnilib
jp12serial/Source/: Makefile.MacOSX  Makefile.rpi  ReadMe.txt  jp12serial.cpp
km/: .classpath  ChangeLog.txt  IrpProtocols.html  IrpProtocols.xml  RMPB_Readme.html  Readme.html  Setup.sh  Setup.vbs  build.xml  irptransmogrifier.bat  irptransmogrifier.sh  protocols.ini  rmProtocols.xml  setup.sh
km/rmirwin10ble/: IBleInterface.java  IBleInterface_.java  IBlexInterface.java  WCLble.java  Win10BLE.java
remotes/maps/: AOC-67100.map  ARRS05G.map  ATT-S30-S1B.map  CM-7500XRC2.map  DreamboxV5.map  Humax-RM-F01.map  INT-422-2.map  INT-422.map  IRC600.map  Manawa.map  MonsterRev200.map  NS-RC05A-11.map  NS-RMT415-v2.map  NS-RMT415.map  OARUSB03G.map  PotenzaADB.map  PotenzaBC4.map  Rem48tvb.map  SkyHD rev.9F URC1672.map  TTYV-URC179251.map  URC-1047.map  URC-1280 v2.map  URC-1280.map  URC-1666.map  URC-2025.map  URC-2025B2.map  URC-2125BC0.map  URC-3940_R03.map  URC-62440.map  URC-6420.map  URC-6430.map  URC-6440.map  URC-6540.map  URC-67000BAO.map  URC-6820Z.map  URC-7040.map  URC-7130.map  URC-7145.map  URC-7340.map  URC-7556.map  (+17 more)
remotes/rdfs/: 10181018 (URC-39860 B00).rdf  10181018 (URC-39860 B00-02).rdf  (+285 more)
rmirjni4net/: RMIR_ReadMe.txt  ReadMe.md
rmirwclble/: RMIRWCLble.sln
rmirwin10ble/: RMIRWin10BLE.sln
(+185 files in other folders)
